{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "19f2f3a4-8209-122b-b738-31dc5d846b3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec7e9e168a49776b",
            "domain": "vpc",
            "id": "eipalloc-0ec7e9e168a49776b",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-39-233-23.us-west-2.compute.amazonaws.com",
            "public_ip": "52.39.233.23",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "convert-tf",
              "Source": "convert-tf"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:internet-gateway/igw-0c472db594a4c98f0",
            "id": "igw-0c472db594a4c98f0",
            "owner_id": "886783038127",
            "tags": {
              "Name": "convert-tf"
            },
            "tags_all": {
              "Name": "convert-tf",
              "Source": "convert-tf"
            },
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec7e9e168a49776b",
            "association_id": "eipassoc-099eb308504ec2446",
            "connectivity_type": "public",
            "id": "nat-0c9213ac4e3f61b93",
            "network_interface_id": "eni-074e922fb95b31f10",
            "private_ip": "10.0.1.101",
            "public_ip": "52.39.233.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df91efb5a7647d8e",
            "tags": {
              "Name": "convert-tf"
            },
            "tags_all": {
              "Name": "convert-tf",
              "Source": "convert-tf"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0028c24a367f8fcc91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c9213ac4e3f61b93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0028c24a367f8fcc9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e32d6c48b7b6af801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c9213ac4e3f61b93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e32d6c48b7b6af80",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06c176a73070775c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c9213ac4e3f61b93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c176a73070775c3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c472db594a4c98f0",
            "id": "r-rtb-0df470e0ee8beedb31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df470e0ee8beedb3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c472db594a4c98f0",
            "id": "r-rtb-055d4d13bb06483361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055d4d13bb0648336",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c472db594a4c98f0",
            "id": "r-rtb-04bcbadf5dccb12711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04bcbadf5dccb1271",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:route-table/rtb-0028c24a367f8fcc9",
            "id": "rtb-0028c24a367f8fcc9",
            "owner_id": "886783038127",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "convert-tf-private"
            },
            "tags_all": {
              "Name": "convert-tf-private",
              "Source": "convert-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:route-table/rtb-0e32d6c48b7b6af80",
            "id": "rtb-0e32d6c48b7b6af80",
            "owner_id": "886783038127",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "convert-tf-private"
            },
            "tags_all": {
              "Name": "convert-tf-private",
              "Source": "convert-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:route-table/rtb-06c176a73070775c3",
            "id": "rtb-06c176a73070775c3",
            "owner_id": "886783038127",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "convert-tf-private"
            },
            "tags_all": {
              "Name": "convert-tf-private",
              "Source": "convert-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:route-table/rtb-0df470e0ee8beedb3",
            "id": "rtb-0df470e0ee8beedb3",
            "owner_id": "886783038127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c472db594a4c98f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "convert-tf-public-1"
            },
            "tags_all": {
              "Name": "convert-tf-public-1",
              "Source": "convert-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:route-table/rtb-055d4d13bb0648336",
            "id": "rtb-055d4d13bb0648336",
            "owner_id": "886783038127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c472db594a4c98f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "convert-tf-public-2"
            },
            "tags_all": {
              "Name": "convert-tf-public-2",
              "Source": "convert-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:route-table/rtb-04bcbadf5dccb1271",
            "id": "rtb-04bcbadf5dccb1271",
            "owner_id": "886783038127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c472db594a4c98f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "convert-tf-public-3"
            },
            "tags_all": {
              "Name": "convert-tf-public-3",
              "Source": "convert-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0a8d87ee89d3bdc",
            "route_table_id": "rtb-0028c24a367f8fcc9",
            "subnet_id": "subnet-0fdeb301e09e9c2f1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb779dd53df6f9e7",
            "route_table_id": "rtb-0e32d6c48b7b6af80",
            "subnet_id": "subnet-051da4905b28a892d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed5429a9b2911805",
            "route_table_id": "rtb-06c176a73070775c3",
            "subnet_id": "subnet-0e3e9e883b16ede07"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6eb6ce1a630fa2",
            "route_table_id": "rtb-0df470e0ee8beedb3",
            "subnet_id": "subnet-0df91efb5a7647d8e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c941f2116bd42a4a",
            "route_table_id": "rtb-0df470e0ee8beedb3",
            "subnet_id": "subnet-006b8ff6658020ac2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc484dc6082c5477",
            "route_table_id": "rtb-0df470e0ee8beedb3",
            "subnet_id": "subnet-0651eb44a32aa5eef"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:subnet/subnet-0fdeb301e09e9c2f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdeb301e09e9c2f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886783038127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "convert-tf-private-1"
            },
            "tags_all": {
              "Name": "convert-tf-private-1",
              "Source": "convert-tf"
            },
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:subnet/subnet-051da4905b28a892d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051da4905b28a892d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886783038127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "convert-tf-private-2"
            },
            "tags_all": {
              "Name": "convert-tf-private-2",
              "Source": "convert-tf"
            },
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:subnet/subnet-0e3e9e883b16ede07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3e9e883b16ede07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886783038127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "convert-tf-private-3"
            },
            "tags_all": {
              "Name": "convert-tf-private-3",
              "Source": "convert-tf"
            },
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:subnet/subnet-0df91efb5a7647d8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df91efb5a7647d8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886783038127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "convert-tf-public-1"
            },
            "tags_all": {
              "Name": "convert-tf-public-1",
              "Source": "convert-tf"
            },
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:subnet/subnet-006b8ff6658020ac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006b8ff6658020ac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886783038127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "convert-tf-public-2"
            },
            "tags_all": {
              "Name": "convert-tf-public-2",
              "Source": "convert-tf"
            },
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:subnet/subnet-0651eb44a32aa5eef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0651eb44a32aa5eef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886783038127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "convert-tf-public-3"
            },
            "tags_all": {
              "Name": "convert-tf-public-3",
              "Source": "convert-tf"
            },
            "vpc_id": "vpc-03e3b69e1f095d6bc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:886783038127:vpc/vpc-03e3b69e1f095d6bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d1c991cb5e7ee78",
            "default_route_table_id": "rtb-07722c3985109fb59",
            "default_security_group_id": "sg-0552ac185b8f99103",
            "dhcp_options_id": "dopt-86ee68fe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e3b69e1f095d6bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07722c3985109fb59",
            "owner_id": "886783038127",
            "tags": {
              "Name": "convert-tf"
            },
            "tags_all": {
              "Name": "convert-tf",
              "Source": "convert-tf"
            }
          }
        }
      ]
    }
  ]
}